--- a/src/components/listElement/ListElement.css
+++ b/src/components/listElement/ListElement.css
@@ -1,5 +1,12 @@
 img {
-  height: 150px;
-  width: 150px;
-  display: inline-block;
+  display: block;
+  border-radius: 5px;
+  width: 80px;
+  margin: 0 auto 10px;
+}
+
+p {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 30px;
+  
 }
