--- a/src/components/listHeader/ListHeader.css
+++ b/src/components/listHeader/ListHeader.css
@@ -2,6 +2,7 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-style: oblique;
     font-weight: bold;
+    font-size: 30px;
 }
 
 .dropdown-toggle:hover{
